@@ -912,6 +912,9 @@
         name = "Rocco J Carello (rogue)"
     [/entry]
     [entry]
+        name = "Rolf Sievers (Lizard)"
+    [/entry]
+    [entry]
         name = "Ronny Standtke"
     [/entry]
     [entry]
