@@ -669,5 +669,15 @@ int sum_str_int_map(const stats::str_int_map& m)
 	return res;
 }
 
+int sum_cost_str_int_map(const stats::str_int_map &m)
+{
+	int cost = 0;
+	for (stats::str_int_map::const_iterator i = m.begin(); i != m.end(); ++i) {
+		cost += i->second * unit_type_data::types().find_unit_type(i->first)->second.cost();
+	}
+
+	return cost;
+}
+
 } // end namespace statistics
 
