@@ -66,6 +66,7 @@ namespace statistics
 	};
 
 	int sum_str_int_map(const stats::str_int_map& m);
+	int sum_cost_str_int_map(const stats::str_int_map &m);
 
 	struct disabler
 	{
